--- a/public/json/project.json
+++ b/public/json/project.json
@@ -1,37 +1,38 @@
 [
+
     {
         "id":"1",
-      "image": "../img-1 (2).jpeg",
+      "image": "https://i.ibb.co/4MYDMxQ/img-1-2.jpg",
       "category": "Dashboard Design",
       "Type": "Creative Design"
     },
     {
         "id":"2",
-      "image": "../img-2 (1).jpeg",
+      "image": "https://i.ibb.co/sgxnWPH/img-2-1.jpg",
       "category": "Landing Pages",
       "Type": "Creative Design"
     },
     {
         "id":"3",
-      "image": "../img-4 (1).jpeg",
+      "image": "https://i.ibb.co/CbDNGpQ/img-4-1.jpg",
       "category": "Illustration Design",
       "Type": "Creative Design"
     },
     {
         "id":"4",
-      "image": "../img-6.jpeg",
+      "image": "https://i.ibb.co/Nt9yC0S/img-6.jpg",
       "category": "Dashboard Design",
       "Type": "Creative Design"
     },
     {
         "id":"5",
-      "image": "../img-5.jpeg",
+      "image": "https://i.ibb.co/WcVFnxs/img-5.jpg",
       "category": "App Development",
       "Type": "Creative Design"
     },
     {
         "id":"6",
-      "image": "../img-3 (2).jpeg",
+      "image": "https://i.ibb.co/557frnr/img-3-2.jpg",
       "category": "Web Development",
       "Type": "Creative Design"
     }
